# content-pipeline

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/formats/: visionnaire.yaml
src/pipeline/: __init__.py  cli.py
